2005-00-12  Archana Shah  <archana.shah@wipro.com>
	* libgnomevfs/gnome-vfs-xfer.c: (handle_overwrite):
	Skip the copy operation if we are trying to overwrite the file onto itself.
	Partly fixes bug# 311591

2006-01-11  Alexander Larsson  <alexl@redhat.com>

	* modules/ftp-method.c:
	don't use absolut paths, fixes #312343
	Patch from Fabio Bonelli
	
2006-01-11  Alexander Larsson  <alexl@redhat.com>

	* modules/ftp-method.c:
	initial ftp proxy work, #113200
	Patch from Fabio Bonelli

2006-01-10  Christian Kellner  <gicmo@gnome.org>

	* configure.in: Require glib 2.9.2
	
	* modules/file-method.c: Remove code copied from glib obsoleted
	with the dependency to glib 2.9.2. 

2006-01-08  Christian Kellner  <gicmo@gnome.org>

	* modules/http-neon-method.c: (http_get_file_info):
	Destroy the request object only after we have read out the
	headers. Patch from Christian Neumair (#325861).

2006-01-08  Christian Kellner  <gicmo@gnome.org>

	* configure.in:
	Clean up some SSL stuff and report SSL support.
	Add --http-debug configure options to enable http module
	debugging support (activate it per default for cvs versions).
	
	* imported/neon/Makefile.am:
	* imported/neon/ne_auth.c:
	* imported/neon/ne_gnomevfs.c:
	* imported/neon/ne_utils.c:
	Make SSL work again.
	
	* modules/http-neon-method.c:
	Report NOT_SUPPORTED if a ssl uri was requested but no ssl
	support was compiled in.

	(#326030)

2006-01-07  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Add "zh_HK" to ALL_LINGUAS.

2006-01-06  Christian Neumair  <chris@gnome-de.org>

	* MAINTAINERS: Add.

2006-01-05  John McCutchan  <ttb@tentacle.dhs.org>

	* modules/inotify-path.c: (ip_event_dispatch):
	When delivering a paired MOVED_TO event do the right thing and check the
	MOVED_TO filename instead of the MOVED_FROM. (#324999)

2006-01-03  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: remove comment which refers to
	code which was removed when we started using
	AM_GCONF_SOURCE_2
